@@ -30,7 +30,7 @@ public class IntSetUtil {
         Class<? extends MutableIntSetFactory<?>> intSetFactoryClass =
             (Class<? extends MutableIntSetFactory<?>>)
                 Class.forName(System.getProperty(INT_SET_FACTORY_CONFIG_PROPERTY_NAME));
-        MutableIntSetFactory<?> intSetFactory = intSetFactoryClass.newInstance();
+        MutableIntSetFactory<?> intSetFactory = intSetFactoryClass.getConstructor().newInstance();
         setDefaultIntSetFactory(intSetFactory);
       } catch (Exception e) {
         System.err.println(
